# bridge_mf_cpp

./: .gitignore  CMakeLists.txt  ReadMe.txt  cmake_clean.sh
.github/workflows/: cmake.yml
demo/: CMakeLists.txt  demo.cpp
lib/: CMakeLists.txt
lib/inc/: Bid.h  BidEngine.h  BidManager.h  BidProposer.h  Card.h  Deal.h  Hand.h  HandSuits.h  HandSuitsPoints.h  Pair.h  Suit.h  bridge_util.h
lib/src/: Bid.cpp  BidEngine.cpp  BidManager.cpp  BidProposer.cpp  Card.cpp  Deal.cpp  Hand.cpp  HandSuits.cpp  HandSuitsPoints.cpp  Pair.cpp  Suit.cpp  bridge_util.cpp
test/: BidManager_test.cpp  BidProposer_test.cpp  Bid_test.cpp  CMakeLists.txt  Card_test.cpp  Deal_test.cpp  HandSuitsPoints_test.cpp  HandSuits_test.cpp  Hand_test.cpp  Handtest.cpp  Utils_test.cpp
